o Added addmsg.pl (by myself) to contrib section.
  It's a script that will parse your oinkmaster.conf for "disablesid" lines
  and add to them their SID message.
o Fixed bug related to deleted rules printout.
o Default URL is now http://www.snort.org/dl/signatures/snortrules-stable.tar.gz.
o Print warning if a file in the archive is empty, unless running in quiet mode.
o A few minor cleanups.



v0.6 - 20020706
~~~~~~~~~~~~~~~
o Rules that are disabled by default in the rules distribution
  will now NOT be re-enabled by Oinkmaster by default, finally.
  I.e. "-p" is obsolete. If you want to enable those rules you now
  have to use "-e".
o A couple of minor documentation updates.



v0.5 - 20020506
~~~~~~~~~~~~~~~
o Fixed bug where all filenames would not always be printed.
o Fixed minor whitespace idiocy.
o Print which rules that are being preserved or enabled (for rules that
  are commented out by default) when running in verbose mode.
o SID dup warnings will no longer be printed when running in quiet mode.
o Document example where running silently as a cron job, only
  sending e-mail when there were updates available.
o Document that using -p is usually a good idea.



v0.4 - 20020422
~~~~~~~~~~~~~~~
o More or less rewritten from scratch.
o The file rules.ignore has been renamed to oinkmaster.conf, which contains
  more than just the sids to disable (have a look at it).
o Slightly improved error checking.
o Better output format (or at least it has changed).
o Oinkmaster will now also update other files (and print changes in them) than
  *.rules and classification.conf. The default is now *.rules, *.conf, *.config,
  *.txt and *.map so we also update the MIB and sid-msg.map files for example.
  Files to be updated is defined by a regexp in oinkmaster.conf so this can
  easily be changed.
o Removed several stupid command line options.
o Print warning message if two (or more) rules share the same SID.